[package]
name = "nb3_import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx={version="0.5.13",features=["mysql","runtime-tokio-rustls","macros","chrono"]}
tokio = { version = "1", features = ["full"] }
simple-log = "1.5.1"
serde_json = "1"
progress = "0.2"
tar = "0.4.38"
flate2 = "1.0.24"